k8s/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: cesargdd/comments-grpc
        ports:
        - containerPort: 50051
---

apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    app: comments
  type: ClusterIP
  ports:
  - port: 50053
    targetPort: 50053
    protocol: TCP
