k8s/postgres-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-claim
          persistentVolumeClaim:
            claimName: volume-claim
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgres-claim
            mountPath: /var/lib/postgresql/data
            subPath: postgres
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
