k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: cesargdd/posts-grpc
---

apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
  - port: 50052
    targetPort: 50052
    protocol: TCP
