k8s/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: cesargdd/users-grpc
        ports:
        - containerPort: 50051
---

apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  type: ClusterIP
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
